# Reversi

./: .gitignore  CMakeLists.txt  TinyLog.h
include/: calculation.h  clickablehelper.h  commonincludes.h  reversigui.h  ui_reversigui.h
src/: calculation.cpp  clickablehelper.cpp  main.cpp  reversigui.cpp
